5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1714_2525.log
== TEST (2019-05-15 12:06:36) 
-- CODE:
n= int(input("numero inteiro"))

soma = 0
t = 0

while(n < 1 and 1 > n):
	soma = soma + (n/t)
	t = t + 1
	if(soma == )
-- ERROR:
File "XXXX", line 9
    if(soma == )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:06:44) 
-- CODE:
n= int(input("numero inteiro"))

soma = 0
t = 0

while(n < 1 and 1 > n):
	soma = soma + (n/t)
	t = t + 1
	
-- ERROR:
File "XXXX", line 9
    if(soma == )
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
